# HMG-public

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMUNITY  LICENSE-COMMUNITY.txt  README.md  SECURITY.md  public-manifest.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-release.yml  pages.yml
adapters/templates/hermes/: README.md  adapter.toml
adapters/templates/openclaw/: README.md  adapter.toml
adapters/templates/vscode/: README.md  adapter.toml
certification/: Cargo.toml  README.md
certification/src/: lib.rs
docs/: README.md  api-reference.md  architecture.md  correction-governance.md  faq.md  getting-started.md  index.html  trademark-policy.md  upgrade.md
docs/adr/: 2026-05-20-local-store-path-and-daemon.md  2026-05-24-agent-tool-output-contract-v2.md
docs/docs/: index.html
docs/md/: README.md  adr-classification.md  api-reference.md  architecture.md  concepts.md  contributing-agent-adapter.md  correction-governance.md  faq.md  getting-started.md  security.md  standard-release-sop.md  trademark-policy.md  upgrade.md
docs/md/de/: adr-classification.md  api-reference.md  architecture.md  concepts.md  correction-governance.md  faq.md  getting-started.md  trademark-policy.md  upgrade.md
docs/md/es/: faq.md  (+8 more)
docs/screenshots/: index.html
examples/: README.md  quickstart.py  quickstart.ts
examples/agent-adapter/: README.md
examples/synthetic-fixtures/: sample-atoms.json
mcp/: README.md
mcp/schemas/: tools.json
openapi/: hmg-server.yaml
pi-agent/: README.md  package.json
pi-agent/prompts/: hmg.md
protocol/: Cargo.toml  README.md
protocol/src/: atom.rs  bulk.rs  context.rs  correction.rs  governance.rs  lib.rs  output.rs  scope.rs  scope_parsers.rs  tests.rs
schemas/: public-manifest.schema.json
scripts/: check-export-leak.sh  check-public-surface-drift.sh  deploy-release.sh  install.ps1  install.sh
sdk-python/: README.md  pyproject.toml
sdk-python/hmg/: __init__.py
sdk-python/hmg_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: index.ts
site/: index.html
site/docs/: index.html
spec/: README.md
(+72 files in other folders)
