[package]
name = "hmg-certification"
version = "1.6.7"
edition = "2021"
license = "Apache-2.0"
description = "Conformance test suite for HMG-compatible implementations"
repository = "https://github.com/HMG-AI/HMG-public"

[workspace]

[dependencies]
hmg-protocol = { path = "../protocol" }
serde_json = "1"
