[package]
name = "hmg-protocol"
version = "1.4.13"
edition = "2024"
license = "Apache-2.0"
description = "Wire-safe public DTO types for the HMG agent memory protocol"
repository = "https://github.com/HMG-AI/HMG-public"
readme = "README.md"
keywords = ["hmg", "memory", "agent", "protocol", "ai"]
categories = ["api-bindings", "data-structures"]

# Exclude from parent workspace — this crate is standalone and
# will be synced to HMG-public independently.
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
