[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmg-sdk"
version = "1.4.10"
description = "HMG Agent Memory SDK — Community Edition"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["hmg", "memory", "agent", "protocol", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/HMG-AI/HMG-public"
